Heavy code cleanup, started work on Nether Biome